Added new project shells
Added shells for more recent projects. Commented out Posts section from homepage. Minor updates to About page.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              haleyhopper22@gmail.com
 description:        Web Design and Development Portfolio
 author:             Haley Hopper
 baseurl:            "/"
-url:                "https://startbootstrap.github.io"
+url:                ""
 
 # Social Profiles
 twitter_username:
