remove instagram username

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:                ""
 twitter_username:
 github_username:    hhopper22
 facebook_username:
-instagram_username:  haleyelise25
+instagram_username:
 linkedin_username:  haleyhopper
 pinterest_username:  haleyhopperdesign
 
